# Internship-Python

./: CompDiag.py  README.md  diag_act2.vsdx  diagram_act.vsdx  diagram_comparison_report.html  pyproject.toml  report_template.html
src/output/: diagram_comparison_report.html
src/visio_class_compare/: compare.py
src/visio_class_compare/report_output/: diagram_comparison_report.html
src/visio_class_compare/templates/: report_template.html
src/visio_class_compare/visio_class_compare.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_compare.py
visio_class_compare/: compare.py
visio_class_compare/report_output/: diagram_comparison_report.html
visio_class_compare/visio_class_compare.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
