[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visio-class-compare"
version = "0.1.0"
description = "Compare Visio class diagrams (.vsdx) and generate HTML reports"
authors = [
  {name = "Omar Ben Mahmoud", email = "omar.ben.mahmoud2002@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

dependencies = [
  "vsdx>=0.0.7",
  "jinja2>=3.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0"
]

[project.scripts]
visio-compare = "visio_class_compare.compare:main"

[tool.setuptools.packages.find]
where = ["visio_class_compare"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
